# esp-mcp-toolchain

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  README.md  environment.yml  pyproject.toml  requirements.txt
.codex/: config.toml
.codex-plugin/: plugin.json
.github/workflows/: tests.yml
docs/: 00-overview.md  01-mcp-lifecycle.md  02-tool-spec.md  03-resource-spec.md  04-prompt-spec.md  05-hardwork-module.md  06-memory-module.md  07-database-design.md  08-error-handling.md  09-permission-policy.md  10-development-roadmap.md  11-development-rules.md  12-development-status.md
docs/adr/: 0001-feature-branch-workflow.md  0002-serial-monitor-architecture.md  0003-sqlite-log-authority.md
examples/esp_idf_key_led_buzzer/: CMakeLists.txt  README.md
examples/esp_idf_project/: README.md
examples/micropython_project/: README.md
hardwork/: README.md
hardwork/index/: hardwork_manifest.json
hardwork/processed/: board_summary.md  flash_layout.md  gpio_map.md  known_issues.md  serial_interface.md
scripts/: clean_runtime_data.py  export_logs.py  init_database.py  run_cli.py  run_cross_worktree_tests.ps1  run_mcp_server.py  setup_env.ps1  setup_env.sh
skills/esp-mcp/: SKILL.md
toolchain/: README.md  cli.py  mcp_server.py
toolchain/esp_mcp_toolchain/: config.py  errors.py  paths.py  permissions.py  project_context.py  project_migration.py  schemas.py  server.py
toolchain/tests/: conftest.py  test_build_tools.py  test_error_tools.py  test_espidf_backend.py  test_esptool_backend.py  test_exec_tools.py  test_file_tools.py  test_flash_tools.py  (+15 more)
(+78 files in other folders)
